[tool.poetry]
name = "acr-monitoring"
version = "0.0.0"
description = "listens to acr cloudevents and leverages the zabbix sender proto to send that timestamp of the last recognized track to zabbix so we can notice if there are gaps"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "acrmonitor.py"}]

[tool.poetry.scripts]
acrmonitor = 'acrmonitor:main'

[tool.poetry.dependencies]
python = "^3.11"
cloudevents = "^1.12.0"
ConfigArgParse = "^1.7"
kafka-python-ng = "^2.2.3"
py-zabbix = "^1.1.7"
minio = "^7.2.16"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.2"
pytest-ruff = "^0.5"
pytest-cov = "^6.2.1"
pytest-random-order = "^1.2.0"
ruff = "^0.12.11"
isort = "^6.0.1"
pytest-isort = "^4.0.0"
mkdocs = "^1.5.3"
freezegun = "^1.5.5"
mkdocs-material = "^9.6.18"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.2"
mkdocs-section-index = "^0.3.10"
mkdocs-autorefs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=acrmonitor --cov-fail-under=100 --ruff --isort --ignore=docs/"
#filterwarnings = ["ignore::DeprecationWarning:pytest_freezegun"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
